# ipv6-care

./: .gitignore  LICENSE  Makefile.am  Makefile.flags  README  README.md  TODO  configure.ac  debug_macro.sh  makefile  makefile.old  test.c
m4/: getaddrinfo_constants.m4  getnameinfo_proto.m4  socket_options.m4  sys_gettid.m4
man/: Makefile.am  ipv6_care.8
scripts/: IPv6_CARE_binary_lookup.sh  IPv6_CARE_protect_arguments.sh  Makefile.am  complete.sh  getsourceinfo.sh  ipv6_care  ipv6_care-bashcompletion.sh  ipv6_care.in  man2wiki.sh
self_test/: Makefile.am
self_test/src/: Makefile.am
self_test/src/binaries/: Makefile.am  main.c
self_test/src/libs/: Makefile.am  preloaded.c  std.c
src/checking/: Makefile.am  append_to_string.c  append_to_string.h  fd_set_tools.c  fd_set_tools.h  filesystem.c  filesystem.h  function_state.h  get_string.c  get_string.h  init_lib.c  init_lib.h  interpreted_language.h  log.c  log.h  macros.h  networking_tools.c  networking_tools.h  overwritten_functions.c  pollfd_table_tools.c  pollfd_table_tools.h  problems.h  register_problem.c  register_problem.h  stack_tools.c  stack_tools.h  system_commands.c  system_commands.h  variables.c
src/common/: Makefile.am  common_colors.c  common_colors.h  common_fd_tools.c  common_fd_tools.h  common_macros.h  common_networking_tools.c  common_networking_tools.h  common_original_functions.c  common_original_functions.h  common_other_tools.c  common_other_tools.h  common_variables.c
src/patching/: Makefile.am  address.h  address_name_matches.c  address_name_matches.h  addresses_and_names.c  addresses_and_names.h  connection_handling.c  connection_handling.h  created_sockets.c  created_sockets.h  family.h  fd_tools.c  fd_tools.h  function_hooks.c  getxxxxname.c  getxxxxname.h  hook_status.h  hooks.c  hooks.h  ipv6_aware_or_agnostic.c  ipv6_aware_or_agnostic.h  ipv6_to_ipv4_mappings.c  ipv6_to_ipv4_mappings.h  list_of_hooks.h  listening_sockets.c  listening_sockets.h  macros.h  manage_hooks.c  manage_hooks.h  note.txt  original_functions.c  original_functions.h  overwritten_functions.c  overwritten_functions.h  report_socket_options.c  report_socket_options.h  select_and_poll.c  select_and_poll.h  socket_info.c  socket_info.h  (+2 more)
src/self_test/: Makefile.am
src/self_test/binaries/: Makefile.am
src/self_test/libs/: Makefile.am  std.c
test/: test  test.c  test.h
